# svarog3d

./: Cargo.toml  Makefile  README.md  TODO.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/asset/: Cargo.toml
crates/asset/src/: lib.rs  mesh.rs  obj.rs  texture.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: camera.rs  ecs.rs  lib.rs  transform.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: framegraph.rs  lib.rs
crates/renderer/src/shaders/: triangle.wgsl
