[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
winit = "0.30.12"
pollster = "0.4.0"
renderer = { path = "../renderer" }
wgpu = "23.0.1"
corelib = { path = "../corelib" }
asset = { path = "../asset" }
egui = "0.30.0"
egui-winit = "0.30.0"
egui-wgpu = "0.30.0"
