[package]
name = "renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
glam = "0.30.5"
log.workspace = true
parking_lot = "0.12.4"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
corelib = { path = "../corelib" }
asset = { path = "../asset" }
